<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="313dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/spinner_style"
        android:textAlignment="center" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/translate"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_word"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/translated_Phrase"
            android:layout_width="238dp"
            android:layout_height="47dp"
            android:layout_marginStart="68dp"
            android:text="@string/display_phase"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/microphoneButton"
            android:layout_width="47dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:src="@drawable/speaker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toEndOf="@+id/translated_Phrase"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="77dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/translated_Phrase"
            app:srcCompat="@drawable/bird" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>